--- a/pom.xml
+++ b/pom.xml
@@ -114,4 +114,15 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>deployment</id>
+            <url>http://maven.marslab.org/repository/maven-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>deployment</id>
+            <url>http://maven.marslab.org/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 </project>
