--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>wumo</groupId>
     <artifactId>reinforcement-learning-model</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
 
     <developers>
         <developer>
