--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <maven.assembly.plugin.version>3.0.0</maven.assembly.plugin.version>
         <maven.compiler.plugin.version>3.6.1</maven.compiler.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
-        <kotlin.version>1.1.4-3</kotlin.version>
+        <kotlin.version>1.1.50</kotlin.version>
         <!--<nd4j.version>0.9.1</nd4j.version>-->
     </properties>
 
@@ -102,13 +102,6 @@
                         <goals>
                             <goal>compile</goal>
                         </goals>
-                        <!--<configuration>-->
-                            <!--<sourceDirs>-->
-                                <!--&lt;!&ndash;<source>src/main/java</source>&ndash;&gt;-->
-                                <!--<source>src/main/kotlin</source>-->
-                                <!--<source>src/test/kotlin</source>-->
-                            <!--</sourceDirs>-->
-                        <!--</configuration>-->
                     </execution>
                     <execution>
                         <id>test-compile</id>
